hero label misalignment fix

--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,8 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=4">
-  <script src="/assets/script.js?v=4" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=5">
+  <script src="/assets/script.js?v=5" defer></script>
 </head>
 <body>
 
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="callout callout-blue mt-6">
-        Both repositories are source-available under the Veldra license included in each repo.
+        Both repositories are open source on GitHub.
       </div>
     </div>
   </section>
@@ -167,7 +167,6 @@
       </div>
       <div class="footer-bottom">
         <span>&copy; 2026 Veldra, Inc.</span>
-        <span>Source-available under the Veldra license</span>
       </div>
     </div>
   </footer>
