--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=5">
-  <script src="/assets/script.js?v=5" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=6">
+  <script src="/assets/script.js?v=6" defer></script>
 </head>
 <body>
 
@@ -34,6 +34,7 @@
         <div class="navlinks">
           <a href="/" aria-current="page">Home</a>
           <a href="/product/">Product</a>
+          <a href="/observe/">Observe</a>
           <a href="/docs/">Docs</a>
           <a href="/about/">About</a>
         </div>
