--- a/observe/index.html
+++ b/observe/index.html
@@ -525,7 +525,7 @@
     <div class="container">
       <div class="connection-bar fade-up" style="animation-delay:.1s;">
         <label for="api-url">API Endpoint</label>
-        <input type="text" id="api-url" placeholder="http://127.0.0.1:8080/" spellcheck="false" autocomplete="off">
+        <input type="text" id="api-url" placeholder="http://127.0.0.1:8080" spellcheck="false" autocomplete="off">
         <div style="display:flex;align-items:center;gap:8px;">
           <span class="status-dot connecting" id="status-dot"></span>
           <span class="status-label" id="status-label">Connecting...</span>
