--- a/observe/index.html
+++ b/observe/index.html
@@ -447,6 +447,142 @@
     .cat-fee { color: #2d6a00; background: rgba(118,185,0,.08); }
     .cat-system { color: #9c2b1a; background: rgba(220,80,60,.06); }
 
+    /* ── Auth gate ────────────────────────────── */
+    .auth-gate {
+      max-width: 440px;
+      margin: 0 auto;
+      padding: 48px 0 80px;
+    }
+    .auth-card {
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: var(--r-lg);
+      padding: 36px 32px;
+      box-shadow: var(--shadow-md);
+    }
+    .auth-card h2 {
+      font-size: 22px;
+      font-weight: 700;
+      color: var(--ink);
+      margin-bottom: 4px;
+    }
+    .auth-card p.sub {
+      font-size: 14px;
+      color: var(--ink-muted);
+      margin-bottom: 24px;
+    }
+    .auth-field {
+      margin-bottom: 16px;
+    }
+    .auth-field label {
+      display: block;
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--ink-muted);
+      margin-bottom: 6px;
+    }
+    .auth-field input {
+      width: 100%;
+      padding: 10px 14px;
+      border: 1px solid var(--border-md);
+      border-radius: 8px;
+      font-size: 14px;
+      font-family: var(--sans);
+      color: var(--ink);
+      background: var(--bg);
+      box-sizing: border-box;
+    }
+    .auth-field input:focus {
+      outline: none;
+      border-color: var(--blue);
+      box-shadow: 0 0 0 3px rgba(0,104,181,.1);
+    }
+    .auth-submit {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background .15s, box-shadow .15s;
+      margin-top: 8px;
+      font-family: var(--sans);
+    }
+    .auth-submit.primary {
+      background: var(--blue);
+      color: #fff;
+    }
+    .auth-submit.primary:hover {
+      background: var(--blue-light);
+      box-shadow: var(--shadow-sm);
+    }
+    .auth-submit:disabled {
+      opacity: .5;
+      cursor: not-allowed;
+    }
+    .auth-toggle {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 13px;
+      color: var(--ink-muted);
+    }
+    .auth-toggle a {
+      color: var(--blue);
+      text-decoration: none;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    .auth-toggle a:hover { text-decoration: underline; }
+    .auth-msg {
+      padding: 10px 14px;
+      border-radius: 8px;
+      font-size: 13px;
+      margin-bottom: 16px;
+      display: none;
+    }
+    .auth-msg.error {
+      display: block;
+      background: rgba(220,80,60,.06);
+      border: 1px solid rgba(220,80,60,.14);
+      color: #9c2b1a;
+    }
+    .auth-msg.success {
+      display: block;
+      background: rgba(118,185,0,.06);
+      border: 1px solid rgba(118,185,0,.14);
+      color: #2d6a00;
+    }
+    .auth-user-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 20px;
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: var(--r-md);
+      margin-bottom: 16px;
+      font-size: 13px;
+    }
+    .auth-user-bar .user-info {
+      color: var(--ink-muted);
+    }
+    .auth-user-bar .user-info strong {
+      color: var(--ink);
+    }
+    .auth-user-bar .logout-link {
+      color: var(--blue);
+      cursor: pointer;
+      font-weight: 500;
+      text-decoration: none;
+      font-size: 13px;
+      border: none;
+      background: none;
+      font-family: var(--sans);
+    }
+    .auth-user-bar .logout-link:hover { text-decoration: underline; }
+    .hidden { display: none !important; }
+
     /* ── Stale overlay ────────────────────────── */
     .stale .observe-stat-value { opacity: .4; }
     .last-updated {
@@ -504,15 +640,15 @@
   <!-- ── Hero ──────────────────────────────────── -->
   <section class="hero-light" style="padding: 48px 0 32px;">
     <div class="container">
-      <div class="hero-inner fade-up" style="text-align:center;">
-        <div class="hero-label" style="justify-content:center;">
+      <div class="hero-inner fade-up">
+        <div class="hero-label">
           <span class="hero-label-dot"></span>
           <span class="section-eyebrow" style="margin-bottom:0;">Observe Mode</span>
         </div>
         <h1 class="hero-title" style="font-size:clamp(28px,4vw,48px);color:var(--ink);">
           Template verification <span class="accent">dashboard</span>
         </h1>
-        <p class="hero-sub" style="color:var(--ink-muted);max-width:560px;margin:12px auto 0;">
+        <p class="hero-sub" style="color:var(--ink-muted);max-width:560px;margin:12px 0 0;">
           Read-only view of live verdicts, rejection analytics, and policy state.
           No code access. No mutation. Pure observability.
         </p>
@@ -520,16 +656,79 @@
     </div>
   </section>
 
+  <!-- ── Auth gate (shown when not authenticated) ── -->
+  <div id="auth-gate" class="auth-gate">
+    <div class="container">
+      <div class="auth-card fade-up">
+
+        <!-- Login form (default view) -->
+        <div id="auth-login-form">
+          <h2>Sign in to Observe Mode</h2>
+          <p class="sub">Access live template verdicts and rejection analytics.</p>
+          <div id="login-msg" class="auth-msg"></div>
+          <div class="auth-field">
+            <label for="login-email">Email</label>
+            <input type="email" id="login-email" placeholder="you@example.com" autocomplete="email">
+          </div>
+          <div class="auth-field">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" placeholder="Your password" autocomplete="current-password">
+          </div>
+          <button class="auth-submit primary" id="login-btn">Sign in</button>
+          <div class="auth-toggle">
+            Don't have access? <a id="show-register">Request access</a>
+          </div>
+        </div>
+
+        <!-- Register form (toggled) -->
+        <div id="auth-register-form" class="hidden">
+          <h2>Request Observe Access</h2>
+          <p class="sub">Submit your info for admin review. You'll receive an email when approved.</p>
+          <div id="register-msg" class="auth-msg"></div>
+          <div class="auth-field">
+            <label for="reg-name">Full name</label>
+            <input type="text" id="reg-name" placeholder="Jane Smith" autocomplete="name">
+          </div>
+          <div class="auth-field">
+            <label for="reg-email">Email</label>
+            <input type="email" id="reg-email" placeholder="you@example.com" autocomplete="email">
+          </div>
+          <div class="auth-field">
+            <label for="reg-org">Organization</label>
+            <input type="text" id="reg-org" placeholder="MIT, a16z, Braiins, etc.">
+          </div>
+          <div class="auth-field">
+            <label for="reg-password">Password</label>
+            <input type="password" id="reg-password" placeholder="Minimum 8 characters" autocomplete="new-password">
+          </div>
+          <button class="auth-submit primary" id="register-btn">Request access</button>
+          <div class="auth-toggle">
+            Already have access? <a id="show-login">Sign in</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- ── Dashboard (shown when authenticated) ────── -->
+  <div id="dashboard-content" class="hidden">
+
   <!-- ── Connection bar ────────────────────────── -->
   <section style="padding: 0 0 8px;">
     <div class="container">
       <div class="connection-bar fade-up" style="animation-delay:.1s;">
         <label for="api-url">API Endpoint</label>
-        <input type="text" id="api-url" placeholder="http://127.0.0.1:8080" spellcheck="false" autocomplete="off">
+        <input type="text" id="api-url" placeholder="http://localhost:8080" spellcheck="false" autocomplete="off">
         <div style="display:flex;align-items:center;gap:8px;">
           <span class="status-dot connecting" id="status-dot"></span>
           <span class="status-label" id="status-label">Connecting...</span>
         </div>
+      </div>
+
+      <div class="auth-user-bar" id="user-bar">
+        <span class="user-info">Signed in as <strong id="user-display-name"></strong> (<span id="user-display-org"></span>)</span>
+        <button class="logout-link" id="logout-btn">Sign out</button>
       </div>
 
       <div class="demo-banner hidden" id="demo-banner">
@@ -812,6 +1011,8 @@
     </div>
   </section>
 
+  </div><!-- /dashboard-content -->
+
   <!-- ── Footer ────────────────────────────────── -->
   <footer class="footer">
     <div class="container">
@@ -856,16 +1057,19 @@
     // ── State ───────────────────────────────────
     var state = {
       apiUrl: '',
+      authUrl: '',
       mode: 'connecting',   // 'connecting' | 'live' | 'demo'
       stats: null,
       verdicts: [],
       policy: null,
       lastUpdate: 0,
       failures: 0,
-      pollTimer: null
+      pollTimer: null,
+      authToken: null,
+      authUser: null
     };
 
-    // ── DOM refs ────────────────────────────────
+    // ── DOM refs — dashboard ────────────────────
     var $apiUrl      = document.getElementById('api-url');
     var $statusDot   = document.getElementById('status-dot');
     var $statusLabel = document.getElementById('status-label');
@@ -884,6 +1088,17 @@
     var $tierLow     = document.getElementById('tier-low');
     var $tierMid     = document.getElementById('tier-mid');
     var $tierHigh    = document.getElementById('tier-high');
+
+    // ── DOM refs — auth ─────────────────────────
+    var $authGate     = document.getElementById('auth-gate');
+    var $dashboard    = document.getElementById('dashboard-content');
+    var $loginForm    = document.getElementById('auth-login-form');
+    var $registerForm = document.getElementById('auth-register-form');
+    var $loginMsg     = document.getElementById('login-msg');
+    var $registerMsg  = document.getElementById('register-msg');
+    var $userBar      = document.getElementById('user-bar');
+    var $userName     = document.getElementById('user-display-name');
+    var $userOrg      = document.getElementById('user-display-org');
 
     // ── Mock data ───────────────────────────────
     var MOCK_STATS = {
@@ -944,8 +1159,35 @@
       return out;
     }
 
-    // ── Init ────────────────────────────────────
-    function init() {
+    // ── Auth logic ──────────────────────────────
+
+    function extractAuthUrl() {
+      var params = new URLSearchParams(window.location.search);
+      if (params.has('auth')) return params.get('auth').replace(/\/+$/, '');
+      return window.location.protocol + '//' + window.location.hostname + ':3030';
+    }
+
+    function extractApiUrl() {
+      var params = new URLSearchParams(window.location.search);
+      if (params.has('api')) return params.get('api').replace(/\/+$/, '');
+      return window.location.protocol + '//' + window.location.hostname + ':8080';
+    }
+
+    function showAuthGate() {
+      $authGate.classList.remove('hidden');
+      $dashboard.classList.add('hidden');
+      $userBar.classList.add('hidden');
+      stopPolling();
+    }
+
+    function showDashboard(user) {
+      state.authUser = user;
+      $authGate.classList.add('hidden');
+      $dashboard.classList.remove('hidden');
+      $userBar.classList.remove('hidden');
+      $userName.textContent = user.name;
+      $userOrg.textContent = user.org;
+      // Start the dashboard connection
       state.apiUrl = extractApiUrl();
       $apiUrl.value = state.apiUrl;
       $apiUrl.addEventListener('change', function () {
@@ -961,10 +1203,193 @@
       tryConnect();
     }
 
-    function extractApiUrl() {
+    function checkSession() {
+      var token = localStorage.getItem('rg_auth_token');
+      if (!token) {
+        showAuthGate();
+        return;
+      }
+      state.authToken = token;
+      fetch(state.authUrl + '/auth/session', {
+        headers: { 'Authorization': 'Bearer ' + token }
+      })
+        .then(function (r) { return r.json(); })
+        .then(function (data) {
+          if (data.valid && data.user) {
+            showDashboard(data.user);
+          } else {
+            localStorage.removeItem('rg_auth_token');
+            showAuthGate();
+          }
+        })
+        .catch(function () {
+          // Auth service unreachable — fall back to showing dashboard in demo mode
+          showAuthGate();
+        });
+    }
+
+    function doLogin() {
+      var email = document.getElementById('login-email').value.trim();
+      var password = document.getElementById('login-password').value;
+      $loginMsg.className = 'auth-msg';
+      $loginMsg.style.display = 'none';
+
+      if (!email || !password) {
+        showMsg($loginMsg, 'error', 'Email and password are required.');
+        return;
+      }
+
+      var btn = document.getElementById('login-btn');
+      btn.disabled = true;
+      btn.textContent = 'Signing in...';
+
+      fetch(state.authUrl + '/auth/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email: email, password: password })
+      })
+        .then(function (r) { return r.json().then(function (d) { return { status: r.status, data: d }; }); })
+        .then(function (res) {
+          btn.disabled = false;
+          btn.textContent = 'Sign in';
+          if (res.data.ok && res.data.token) {
+            localStorage.setItem('rg_auth_token', res.data.token);
+            state.authToken = res.data.token;
+            showDashboard(res.data.user);
+          } else {
+            showMsg($loginMsg, 'error', res.data.detail || 'Login failed.');
+          }
+        })
+        .catch(function () {
+          btn.disabled = false;
+          btn.textContent = 'Sign in';
+          showMsg($loginMsg, 'error', 'Cannot reach auth service. Is rg-auth running?');
+        });
+    }
+
+    function doRegister() {
+      var name = document.getElementById('reg-name').value.trim();
+      var email = document.getElementById('reg-email').value.trim();
+      var org = document.getElementById('reg-org').value.trim();
+      var password = document.getElementById('reg-password').value;
+      $registerMsg.className = 'auth-msg';
+      $registerMsg.style.display = 'none';
+
+      if (!name || !email || !org || !password) {
+        showMsg($registerMsg, 'error', 'All fields are required.');
+        return;
+      }
+      if (password.length < 8) {
+        showMsg($registerMsg, 'error', 'Password must be at least 8 characters.');
+        return;
+      }
+
+      var btn = document.getElementById('register-btn');
+      btn.disabled = true;
+      btn.textContent = 'Submitting...';
+
+      fetch(state.authUrl + '/auth/register', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name: name, email: email, org: org, password: password })
+      })
+        .then(function (r) { return r.json().then(function (d) { return { status: r.status, data: d }; }); })
+        .then(function (res) {
+          btn.disabled = false;
+          btn.textContent = 'Request access';
+          if (res.data.ok) {
+            showMsg($registerMsg, 'success', 'Check your email to verify your address. You will be notified when approved.');
+          } else {
+            showMsg($registerMsg, 'error', res.data.detail || 'Registration failed.');
+          }
+        })
+        .catch(function () {
+          btn.disabled = false;
+          btn.textContent = 'Request access';
+          showMsg($registerMsg, 'error', 'Cannot reach auth service. Is rg-auth running?');
+        });
+    }
+
+    function doLogout() {
+      var token = state.authToken;
+      localStorage.removeItem('rg_auth_token');
+      state.authToken = null;
+      state.authUser = null;
+      stopPolling();
+      showAuthGate();
+      if (token) {
+        fetch(state.authUrl + '/auth/logout', {
+          method: 'POST',
+          headers: { 'Authorization': 'Bearer ' + token }
+        }).catch(function () {});
+      }
+    }
+
+    function showMsg(el, type, msg) {
+      el.className = 'auth-msg ' + type;
+      el.textContent = msg;
+      el.style.display = 'block';
+    }
+
+    // ── Init ────────────────────────────────────
+    function init() {
       var params = new URLSearchParams(window.location.search);
-      if (params.has('api')) return params.get('api').replace(/\/+$/, '');
-      return window.location.protocol + '//' + window.location.hostname + ':8080';
+      var authRequired = params.has('auth');
+      state.authUrl = extractAuthUrl();
+
+      // Wire up auth form toggles
+      document.getElementById('show-register').addEventListener('click', function () {
+        $loginForm.classList.add('hidden');
+        $registerForm.classList.remove('hidden');
+        $loginMsg.style.display = 'none';
+      });
+      document.getElementById('show-login').addEventListener('click', function () {
+        $registerForm.classList.add('hidden');
+        $loginForm.classList.remove('hidden');
+        $registerMsg.style.display = 'none';
+      });
+
+      // Wire up auth actions
+      document.getElementById('login-btn').addEventListener('click', doLogin);
+      document.getElementById('register-btn').addEventListener('click', doRegister);
+      document.getElementById('logout-btn').addEventListener('click', doLogout);
+
+      // Allow Enter key to submit forms
+      document.getElementById('login-password').addEventListener('keydown', function (e) {
+        if (e.key === 'Enter') doLogin();
+      });
+      document.getElementById('reg-password').addEventListener('keydown', function (e) {
+        if (e.key === 'Enter') doRegister();
+      });
+
+      // If no ?auth= param, skip auth gate and go straight to dashboard
+      if (!authRequired) {
+        showDashboardNoAuth();
+        return;
+      }
+
+      // Check existing session
+      checkSession();
+    }
+
+    // Show dashboard without auth (no ?auth= param in URL)
+    function showDashboardNoAuth() {
+      $authGate.classList.add('hidden');
+      $dashboard.classList.remove('hidden');
+      $userBar.classList.add('hidden');
+      state.apiUrl = extractApiUrl();
+      $apiUrl.value = state.apiUrl;
+      $apiUrl.addEventListener('change', function () {
+        var v = $apiUrl.value.trim();
+        if (v && v !== state.apiUrl) {
+          state.apiUrl = v;
+          stopPolling();
+          state.failures = 0;
+          setMode('connecting');
+          tryConnect();
+        }
+      });
+      tryConnect();
     }
 
     // ── Mode management ─────────────────────────
