--- a/observe/index.html
+++ b/observe/index.html
@@ -19,8 +19,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=6">
-  <script src="/assets/script.js?v=6" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=7">
+  <script src="/assets/script.js?v=7" defer></script>
 
   <style>
     /* ── Observe-specific styles ────────────────── */
@@ -1164,6 +1164,9 @@
     function extractAuthUrl() {
       var params = new URLSearchParams(window.location.search);
       if (params.has('auth')) return params.get('auth').replace(/\/+$/, '');
+      if (window.location.hostname === 'veldra.org' || window.location.hostname === 'www.veldra.org') {
+        return 'https://auth.veldra.org';
+      }
       return window.location.protocol + '//' + window.location.hostname + ':3030';
     }
 
