--- a/product/index.html
+++ b/product/index.html
@@ -33,12 +33,11 @@
         <div class="navlinks">
           <a href="/">Home</a>
           <a href="/product/" aria-current="page">Product</a>
-          <a href="/observe/">Observe</a>
           <a href="/docs/">Docs</a>
           <a href="/about/">About</a>
         </div>
         <div class="nav-actions">
-          <a href="https://github.com/LeavesJ/veldra" class="btn btn-primary btn-sm" target="_blank" rel="noreferrer">GitHub</a>
+          <a href="/observe/" class="btn btn-primary btn-sm">Observe</a>
         </div>
         <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18M3 6h18M3 18h18"/></svg>
@@ -58,7 +57,6 @@
         <p class="hero-sub">Evaluate block templates against operator policy with explainable rejections, live observability, and structured exports. Built in Rust for Bitcoin mining pools.</p>
         <div class="hero-actions">
           <a href="/docs/" class="btn btn-primary">Read the Docs</a>
-          <a href="https://github.com/LeavesJ/veldra" class="btn" style="border-color:rgba(255,255,255,.18);color:rgba(255,255,255,.85);background:rgba(255,255,255,.06);" target="_blank" rel="noreferrer">View on GitHub</a>
         </div>
       </div>
     </div>
@@ -203,7 +201,6 @@ cd veldra
         <p style="color:rgba(255,255,255,.55);max-width:500px;margin:0 auto 24px;">Deploy ReserveGrid OS and get deterministic, observable template verification with full reason codes.</p>
         <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap;">
           <a href="/docs/" class="btn btn-primary">Read the docs</a>
-          <a href="https://github.com/LeavesJ/veldra" class="btn" style="border-color:rgba(255,255,255,.15);color:rgba(255,255,255,.8);background:rgba(255,255,255,.06);" target="_blank" rel="noreferrer">View on GitHub</a>
         </div>
       </div>
     </div>
@@ -227,7 +224,6 @@ cd veldra
           <h4>Resources</h4>
           <div class="footer-links">
             <a href="/docs/">Documentation</a>
-            <a href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">GitHub</a>
           </div>
         </div>
         <div>
