--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
         <div class="navlinks">
           <a href="/" aria-current="page">Home</a>
           <a href="/product/">Product</a>
-          <a href="/observe/">Observe</a>
           <a href="/docs/">Docs</a>
           <a href="/about/">About</a>
         </div>
         <div class="nav-actions">
-          <a href="https://github.com/LeavesJ/veldra" class="btn btn-primary btn-sm" target="_blank" rel="noreferrer">GitHub</a>
+          <a href="/observe/" class="btn btn-primary btn-sm">Observe</a>
         </div>
         <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18M3 6h18M3 18h18"/></svg>
@@ -64,7 +63,6 @@
         </p>
         <div class="hero-actions">
           <a href="/product/" class="btn btn-primary">Explore ReserveGrid OS</a>
-          <a href="https://github.com/LeavesJ/veldra" class="btn" style="border-color:rgba(255,255,255,.18);color:rgba(255,255,255,.85);background:rgba(255,255,255,.06);" target="_blank" rel="noreferrer">View on GitHub</a>
         </div>
       </div>
     </div>
@@ -212,7 +210,6 @@
           <h4>Resources</h4>
           <div class="footer-links">
             <a href="/docs/">Documentation</a>
-            <a href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">GitHub</a>
           </div>
         </div>
         <div>
