--- a/observe/index.html
+++ b/observe/index.html
@@ -1687,7 +1687,7 @@
         if (e.key === 'Enter') doRegister();
       });
 
-      // If no ?auth= param, skip auth gate and go straight to dashboard （with ! or without !)
+      // If no ?auth= param, skip auth gate and go straight to dashboard
       if (authRequired) {
         showDashboardNoAuth();
         return;
