--- a/about/index.html
+++ b/about/index.html
@@ -98,27 +98,21 @@
   <section class="section">
     <div class="container">
       <div class="section-header">
-        <div class="section-eyebrow">Open source</div>
-        <h2>Source-available</h2>
+        <div class="section-eyebrow">Architecture</div>
+        <h2>Built in Rust</h2>
       </div>
       <div class="grid-2">
         <div class="card">
-          <h3>Core repository</h3>
-          <p>The ReserveGrid OS codebase: rg-protocol, pool-verifier, template-manager, and sv2-bridge.</p>
-          <div style="margin-top:16px;">
-            <a href="https://github.com/LeavesJ/veldra" class="btn btn-sm" target="_blank" rel="noreferrer">github.com/LeavesJ/veldra</a>
-          </div>
+          <h3>Core stack</h3>
+          <p>rg-protocol, pool-verifier, template-manager, and sv2-bridge. All written in Rust with deterministic, fail-fast design.</p>
         </div>
         <div class="card">
-          <h3>Website</h3>
-          <p>This site. Static HTML, CSS, JS. Hosted on GitHub Pages.</p>
-          <div style="margin-top:16px;">
-            <a href="https://github.com/LeavesJ/veldra-site" class="btn btn-sm" target="_blank" rel="noreferrer">github.com/LeavesJ/veldra-site</a>
-          </div>
+          <h3>Observe mode</h3>
+          <p>Auth-gated live dashboard for prospective operators. Real-time verdicts, consensus safety metrics, and structured exports.</p>
         </div>
       </div>
       <div class="callout callout-blue mt-6">
-        Both repositories are open source on GitHub.
+        Interested in early access? <a href="/observe/" style="color:inherit;text-decoration:underline;">Request observe mode access</a>.
       </div>
     </div>
   </section>
@@ -161,6 +155,14 @@
           <div class="footer-links">
             <a href="/about/">About</a>
             <a href="mailto:jarrondeng@veldra.org">Contact</a>
+          </div>
+        </div>
+        <div>
+          <h4>Legal</h4>
+          <div class="footer-links">
+            <a href="/privacy/">Privacy</a>
+            <a href="/terms/">Terms</a>
+            <a href="/disclaimer/">Disclaimer</a>
           </div>
         </div>
       </div>
