--- a/product/index.html
+++ b/product/index.html
@@ -181,18 +181,11 @@
       </div>
       <div style="margin-top:48px;">
         <div class="section-header">
-          <h3>Quick start</h3>
+          <h3>Try it live</h3>
         </div>
-        <div class="code-panel fade-up">
-          <button class="copy-btn">Copy</button>
-<pre># Clone the repository
-git clone https://github.com/LeavesJ/veldra.git
-cd veldra
-
-# Start regtest environment (bitcoind + pool-verifier + dashboard)
-./scripts/dev-regtest.sh
-
-# Dashboard available at http://localhost:9000</pre>
+        <div class="callout callout-blue" style="text-align:center;">
+          <p style="margin:0 0 12px;">Request access to the live observe dashboard and see ReserveGrid OS evaluating templates in real time.</p>
+          <a href="/observe/" class="btn btn-primary">Observe mode</a>
         </div>
       </div>
     </div>
@@ -203,7 +196,7 @@ cd veldra
       <div class="card card-dark fade-up" style="padding:40px;text-align:center;">
         <div class="section-eyebrow" style="color:rgba(255,255,255,.4);">Get started</div>
         <h2 style="color:#fff;margin:12px 0 8px;font-size:28px;">Ready to verify your templates?</h2>
-        <p style="color:rgba(255,255,255,.55);max-width:500px;margin:0 auto 24px;">Deploy ReserveGrid OS and get deterministic, observable template verification with full reason codes.</p>
+        <p style="color:rgba(255,255,255,.55);max-width:500px;margin:0 auto 24px;">Explore the documentation and request observe mode access to see deterministic template verification with full reason codes.</p>
         <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap;">
           <a href="/docs/" class="btn btn-primary">Read the docs</a>
         </div>
@@ -236,6 +229,14 @@ cd veldra
           <div class="footer-links">
             <a href="/about/">About</a>
             <a href="mailto:jarrondeng@veldra.org">Contact</a>
+          </div>
+        </div>
+        <div>
+          <h4>Legal</h4>
+          <div class="footer-links">
+            <a href="/privacy/">Privacy</a>
+            <a href="/terms/">Terms</a>
+            <a href="/disclaimer/">Disclaimer</a>
           </div>
         </div>
       </div>
