--- a/index.html
+++ b/index.html
@@ -219,6 +219,14 @@
             <a href="mailto:jarrondeng@veldra.org">Contact</a>
           </div>
         </div>
+        <div>
+          <h4>Legal</h4>
+          <div class="footer-links">
+            <a href="/privacy/">Privacy</a>
+            <a href="/terms/">Terms</a>
+            <a href="/disclaimer/">Disclaimer</a>
+          </div>
+        </div>
       </div>
       <div class="footer-bottom">
         <span>&copy; 2026 Veldra, Inc.</span>
