--- a/terms/index.html
+++ b/terms/index.html
@@ -56,53 +56,73 @@
   </section>
 
   <section class="section">
-    <div class="legal-body">
+    <div class="legal-layout">
+      <nav class="legal-toc" aria-label="Table of contents">
+        <p class="legal-toc-title">On this page</p>
+        <a href="#acceptance">Acceptance of terms</a>
+        <a href="#description">Description of services</a>
+        <a href="#eligibility">Eligibility</a>
+        <a href="#account">Account responsibilities</a>
+        <a href="#acceptable-use">Acceptable use</a>
+        <a href="#observe-mode">Observe mode access</a>
+        <a href="#license">Software license</a>
+        <a href="#ip">Intellectual property</a>
+        <a href="#liability">Limitation of liability</a>
+        <a href="#warranties">Disclaimer of warranties</a>
+        <a href="#indemnification">Indemnification</a>
+        <a href="#termination">Termination</a>
+        <a href="#modifications">Modifications</a>
+        <a href="#governing-law">Governing law</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="legal-body">
 
-      <h2>1. Acceptance of terms</h2>
-      <p>By accessing or using veldra.org, the observe mode dashboard, or any Veldra software (collectively, the "Services"), you agree to be bound by these Terms of Service. If you do not agree, do not use the Services.</p>
+        <h2 id="acceptance">1. Acceptance of terms</h2>
+        <p>By accessing or using veldra.org, the observe mode dashboard, or any Veldra software (collectively, the "Services"), you agree to be bound by these Terms of Service. If you do not agree, do not use the Services.</p>
 
-      <h2>2. Description of services</h2>
-      <p>Veldra provides ReserveGrid OS, a policy-driven verification and observability layer for Bitcoin mining pool block templates. The Services include the public website, the observe mode dashboard, and the open-source software components (pool-verifier, template-manager, rg-protocol, sv2-bridge, rg-auth).</p>
+        <h2 id="description">2. Description of services</h2>
+        <p>Veldra provides ReserveGrid OS, a policy-driven verification and observability layer for Bitcoin mining pool block templates. The Services include the public website, the observe mode dashboard, and the open-source software components (pool-verifier, template-manager, rg-protocol, sv2-bridge, rg-auth).</p>
 
-      <h2>3. Eligibility</h2>
-      <p>You must be at least 18 years old to use the Services. By registering for an account, you represent that the information you provide is accurate and complete.</p>
+        <h2 id="eligibility">3. Eligibility</h2>
+        <p>You must be at least 18 years old to use the Services. By registering for an account, you represent that the information you provide is accurate and complete.</p>
 
-      <h2>4. Account responsibilities</h2>
-      <p>You are responsible for maintaining the confidentiality of your account credentials. You agree to notify us promptly at jarrondeng@veldra.org if you become aware of any unauthorized use of your account. Veldra is not liable for losses arising from unauthorized access to your account.</p>
+        <h2 id="account">4. Account responsibilities</h2>
+        <p>You are responsible for maintaining the confidentiality of your account credentials. You agree to notify us promptly at jarrondeng@veldra.org if you become aware of any unauthorized use of your account. Veldra is not liable for losses arising from unauthorized access to your account.</p>
 
-      <h2>5. Acceptable use</h2>
-      <p>You agree not to use the Services to violate any applicable law or regulation, attempt to gain unauthorized access to Veldra systems or other users' accounts, interfere with or disrupt the integrity or performance of the Services, reverse engineer or attempt to extract source code from proprietary components, or use the Services to conduct any form of market manipulation or fraudulent activity.</p>
+        <h2 id="acceptable-use">5. Acceptable use</h2>
+        <p>You agree not to use the Services to violate any applicable law or regulation, attempt to gain unauthorized access to Veldra systems or other users' accounts, interfere with or disrupt the integrity or performance of the Services, reverse engineer or attempt to extract source code from proprietary components, or use the Services to conduct any form of market manipulation or fraudulent activity.</p>
 
-      <h2>6. Observe mode access</h2>
-      <p>Access to the observe mode dashboard requires registration and approval by a Veldra administrator. Approval is at our sole discretion. We reserve the right to revoke access at any time, with or without cause. Observe mode displays operational data from connected ReserveGrid OS instances and is provided for informational and evaluation purposes only.</p>
+        <h2 id="observe-mode">6. Observe mode access</h2>
+        <p>Access to the observe mode dashboard requires registration and approval by a Veldra administrator. Approval is at our sole discretion. We reserve the right to revoke access at any time, with or without cause. Observe mode displays operational data from connected ReserveGrid OS instances and is provided for informational and evaluation purposes only.</p>
 
-      <h2>7. Software license</h2>
-      <p>ReserveGrid OS software components are provided under the terms of their respective licenses as specified in each component's repository. Use of the software is subject to those license terms in addition to these Terms of Service.</p>
+        <h2 id="license">7. Software license</h2>
+        <p>ReserveGrid OS software components are provided under the terms of their respective licenses as specified in each component's repository. Use of the software is subject to those license terms in addition to these Terms of Service.</p>
 
-      <h2>8. Intellectual property</h2>
-      <p>The Veldra name, logo, and the ReserveGrid OS brand are the property of Veldra, Inc. The website design, content, and documentation are protected by applicable intellectual property laws. You may not use our trademarks without prior written permission.</p>
+        <h2 id="ip">8. Intellectual property</h2>
+        <p>The Veldra name, logo, and the ReserveGrid OS brand are the property of Veldra, Inc. The website design, content, and documentation are protected by applicable intellectual property laws. You may not use our trademarks without prior written permission.</p>
 
-      <h2>9. Limitation of liability</h2>
-      <p>To the maximum extent permitted by law, Veldra and its officers, directors, employees, and agents shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including but not limited to loss of profits, data, mining revenue, or business opportunity, arising from your use of or inability to use the Services, regardless of the theory of liability.</p>
+        <h2 id="liability">9. Limitation of liability</h2>
+        <p>To the maximum extent permitted by law, Veldra and its officers, directors, employees, and agents shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including but not limited to loss of profits, data, mining revenue, or business opportunity, arising from your use of or inability to use the Services, regardless of the theory of liability.</p>
 
-      <h2>10. Disclaimer of warranties</h2>
-      <p>The Services are provided "as is" and "as available" without warranties of any kind, whether express or implied. Veldra does not warrant that the Services will be uninterrupted, error-free, or free of harmful components. See our <a href="/disclaimer/">Disclaimer</a> for additional details.</p>
+        <h2 id="warranties">10. Disclaimer of warranties</h2>
+        <p>The Services are provided "as is" and "as available" without warranties of any kind, whether express or implied. Veldra does not warrant that the Services will be uninterrupted, error-free, or free of harmful components. See our <a href="/disclaimer/">Disclaimer</a> for additional details.</p>
 
-      <h2>11. Indemnification</h2>
-      <p>You agree to indemnify and hold harmless Veldra, Inc. and its affiliates from any claims, damages, losses, or expenses (including reasonable legal fees) arising from your use of the Services or your violation of these Terms.</p>
+        <h2 id="indemnification">11. Indemnification</h2>
+        <p>You agree to indemnify and hold harmless Veldra, Inc. and its affiliates from any claims, damages, losses, or expenses (including reasonable legal fees) arising from your use of the Services or your violation of these Terms.</p>
 
-      <h2>12. Termination</h2>
-      <p>We may suspend or terminate your access to the Services at any time for any reason, including violation of these Terms. Upon termination, your right to use the Services ceases immediately. Provisions that by their nature should survive termination (including limitations of liability and indemnification) shall survive.</p>
+        <h2 id="termination">12. Termination</h2>
+        <p>We may suspend or terminate your access to the Services at any time for any reason, including violation of these Terms. Upon termination, your right to use the Services ceases immediately. Provisions that by their nature should survive termination (including limitations of liability and indemnification) shall survive.</p>
 
-      <h2>13. Modifications</h2>
-      <p>We reserve the right to modify these Terms at any time. Changes will be posted on this page with an updated revision date. Continued use of the Services after modifications constitutes acceptance of the revised Terms.</p>
+        <h2 id="modifications">13. Modifications</h2>
+        <p>We reserve the right to modify these Terms at any time. Changes will be posted on this page with an updated revision date. Continued use of the Services after modifications constitutes acceptance of the revised Terms.</p>
 
-      <h2>14. Governing law</h2>
-      <p>These Terms are governed by the laws of the State of California, United States, without regard to conflict of law principles. Any disputes arising from these Terms shall be resolved in the courts of Santa Clara County, California.</p>
+        <h2 id="governing-law">14. Governing law</h2>
+        <p>These Terms are governed by the laws of the State of California, United States, without regard to conflict of law principles. Any disputes arising from these Terms shall be resolved in the courts of Santa Clara County, California.</p>
 
-      <h2>15. Contact</h2>
-      <p>For questions about these Terms, contact us at <a href="mailto:jarrondeng@veldra.org">jarrondeng@veldra.org</a>.</p>
+        <h2 id="contact">15. Contact</h2>
+        <p>For questions about these Terms, contact us at <a href="mailto:jarrondeng@veldra.org">jarrondeng@veldra.org</a>.</p>
 
+      </div>
     </div>
   </section>
 
