--- a/observe/index.html
+++ b/observe/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Read-only template verification dashboard. Live verdicts, policy state, and rejection reason analytics for ReserveGrid OS.">
   <meta name="theme-color" content="#0a1628">
 
+  <link rel="canonical" href="https://veldra.org/observe/">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/brand/favicon-16.png">
@@ -1328,7 +1329,7 @@
           <h4>Product</h4>
           <div class="footer-links">
             <a href="/product/">ReserveGrid OS</a>
-            <a href="/observe/">Observe Mode</a>
+            <a href="/product/#demo">Demo</a>
           </div>
         </div>
         <div>
