Veldra terms of services update

--- a/terms/index.html
+++ b/terms/index.html
@@ -117,7 +117,7 @@
         <p>We reserve the right to modify these Terms at any time. Changes will be posted on this page with an updated revision date. Continued use of the Services after modifications constitutes acceptance of the revised Terms.</p>
 
         <h2 id="governing-law">14. Governing law</h2>
-        <p>These Terms are governed by the laws of the State of California, United States, without regard to conflict of law principles. Any disputes arising from these Terms shall be resolved in the courts of Santa Clara County, California.</p>
+        <p>These Terms are governed by the laws of the State of Delaware, United States, without regard to conflict of law principles. Any disputes arising from these Terms shall be resolved in the courts located in the State of Delaware.</p>
 
         <h2 id="contact">15. Contact</h2>
         <p>For questions about these Terms, contact us at <a href="mailto:jarrondeng@veldra.org">jarrondeng@veldra.org</a>.</p>
